# image-stylizer

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  test_api.py
app/: api.py  main.py  models.py  schemas.py  tests.py
src/: image_stylizer.py  main.py  model_loader.py  style_transfer_app.py  test_api.py
